Update get-xap.sh